test/compile_failure/17_too_many_initializers.c
// EXPECT-ERRORS: 1
// EXPECT: too many initializer elements
int values[2] = {1, 2, 3};
